// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateContracts > calls generative functions with the right arguments 1`] = `
[
  {
    "contractConfigs": [
      {
        "abi": [
          {
            "inputs": [
              {
                "internalType": "address",
                "name": "poolRegistryAddress",
                "type": "address",
              },
              {
                "internalType": "address",
                "name": "asset",
                "type": "address",
              },
            ],
            "name": "getPoolsSupportedByAsset",
            "outputs": [
              {
                "internalType": "address[]",
                "name": "",
                "type": "address[]",
              },
            ],
            "stateMutability": "view",
            "type": "function",
          },
        ],
        "address": {
          "56": "0x25E215CcE40bD849B7c286912B85212F984Ff1e0",
          "97": "0x6492dF28A9478230205c940A245Ffb114EaEb9d1",
        },
        "name": "PoolLens",
      },
      {
        "abi": [
          {
            "inputs": [
              {
                "internalType": "address",
                "name": "market",
                "type": "address",
              },
              {
                "internalType": "enum ComptrollerStorage.Action",
                "name": "action",
                "type": "uint8",
              },
            ],
            "name": "ActionPaused",
            "type": "error",
          },
        ],
        "name": "IsolatedPoolComptroller",
      },
      {
        "abi": [
          {
            "inputs": [
              {
                "internalType": "uint256",
                "name": "amount",
                "type": "uint256",
              },
              {
                "internalType": "uint256",
                "name": "amountMax",
                "type": "uint256",
              },
            ],
            "name": "ExcessiveInputAmount",
            "type": "error",
          },
        ],
        "address": {
          "56": {
            "0x94c1495cd4c557f1560cbd68eab0d197e6291571": "0xBBd8E2b5d69fcE9Aaa599c50F0f0960AA58B32aA",
            "0xfd36e2c2a6789db23113685031d7f16329158384": "0x8938E6dA30b59c1E27d5f70a94688A89F7c815a4",
          },
          "97": {
            "0x94d1820b2d1c7c7452a163983dc888cec546b77d": "0x83edf1deE1B730b7e8e13C00ba76027D63a51ac0",
          },
        },
        "name": "SwapRouter",
      },
    ],
    "outputFilePath": "generated/infos/addresses.ts",
  },
]
`;

exports[`generateContracts > calls generative functions with the right arguments 2`] = `
[
  {
    "contractConfigs": [
      {
        "abi": [
          {
            "inputs": [
              {
                "internalType": "address",
                "name": "poolRegistryAddress",
                "type": "address",
              },
              {
                "internalType": "address",
                "name": "asset",
                "type": "address",
              },
            ],
            "name": "getPoolsSupportedByAsset",
            "outputs": [
              {
                "internalType": "address[]",
                "name": "",
                "type": "address[]",
              },
            ],
            "stateMutability": "view",
            "type": "function",
          },
        ],
        "address": {
          "56": "0x25E215CcE40bD849B7c286912B85212F984Ff1e0",
          "97": "0x6492dF28A9478230205c940A245Ffb114EaEb9d1",
        },
        "name": "PoolLens",
      },
      {
        "abi": [
          {
            "inputs": [
              {
                "internalType": "address",
                "name": "market",
                "type": "address",
              },
              {
                "internalType": "enum ComptrollerStorage.Action",
                "name": "action",
                "type": "uint8",
              },
            ],
            "name": "ActionPaused",
            "type": "error",
          },
        ],
        "name": "IsolatedPoolComptroller",
      },
      {
        "abi": [
          {
            "inputs": [
              {
                "internalType": "uint256",
                "name": "amount",
                "type": "uint256",
              },
              {
                "internalType": "uint256",
                "name": "amountMax",
                "type": "uint256",
              },
            ],
            "name": "ExcessiveInputAmount",
            "type": "error",
          },
        ],
        "address": {
          "56": {
            "0x94c1495cd4c557f1560cbd68eab0d197e6291571": "0xBBd8E2b5d69fcE9Aaa599c50F0f0960AA58B32aA",
            "0xfd36e2c2a6789db23113685031d7f16329158384": "0x8938E6dA30b59c1E27d5f70a94688A89F7c815a4",
          },
          "97": {
            "0x94d1820b2d1c7c7452a163983dc888cec546b77d": "0x83edf1deE1B730b7e8e13C00ba76027D63a51ac0",
          },
        },
        "name": "SwapRouter",
      },
    ],
    "outputDirectoryPath": "generated/infos/abis",
  },
]
`;

exports[`generateContracts > calls generative functions with the right arguments 3`] = `
[
  {
    "contractConfigs": [
      {
        "abi": [
          {
            "inputs": [
              {
                "internalType": "address",
                "name": "poolRegistryAddress",
                "type": "address",
              },
              {
                "internalType": "address",
                "name": "asset",
                "type": "address",
              },
            ],
            "name": "getPoolsSupportedByAsset",
            "outputs": [
              {
                "internalType": "address[]",
                "name": "",
                "type": "address[]",
              },
            ],
            "stateMutability": "view",
            "type": "function",
          },
        ],
        "address": {
          "56": "0x25E215CcE40bD849B7c286912B85212F984Ff1e0",
          "97": "0x6492dF28A9478230205c940A245Ffb114EaEb9d1",
        },
        "name": "PoolLens",
      },
      {
        "abi": [
          {
            "inputs": [
              {
                "internalType": "address",
                "name": "market",
                "type": "address",
              },
              {
                "internalType": "enum ComptrollerStorage.Action",
                "name": "action",
                "type": "uint8",
              },
            ],
            "name": "ActionPaused",
            "type": "error",
          },
        ],
        "name": "IsolatedPoolComptroller",
      },
      {
        "abi": [
          {
            "inputs": [
              {
                "internalType": "uint256",
                "name": "amount",
                "type": "uint256",
              },
              {
                "internalType": "uint256",
                "name": "amountMax",
                "type": "uint256",
              },
            ],
            "name": "ExcessiveInputAmount",
            "type": "error",
          },
        ],
        "address": {
          "56": {
            "0x94c1495cd4c557f1560cbd68eab0d197e6291571": "0xBBd8E2b5d69fcE9Aaa599c50F0f0960AA58B32aA",
            "0xfd36e2c2a6789db23113685031d7f16329158384": "0x8938E6dA30b59c1E27d5f70a94688A89F7c815a4",
          },
          "97": {
            "0x94d1820b2d1c7c7452a163983dc888cec546b77d": "0x83edf1deE1B730b7e8e13C00ba76027D63a51ac0",
          },
        },
        "name": "SwapRouter",
      },
    ],
    "outputDirectoryPath": "generated/getters",
  },
]
`;

exports[`generateContracts > calls generative functions with the right arguments 4`] = `
[
  {
    "abiDirectoryPath": "generated/infos/abis",
    "contractConfigs": [
      {
        "abi": [
          {
            "inputs": [
              {
                "internalType": "address",
                "name": "poolRegistryAddress",
                "type": "address",
              },
              {
                "internalType": "address",
                "name": "asset",
                "type": "address",
              },
            ],
            "name": "getPoolsSupportedByAsset",
            "outputs": [
              {
                "internalType": "address[]",
                "name": "",
                "type": "address[]",
              },
            ],
            "stateMutability": "view",
            "type": "function",
          },
        ],
        "address": {
          "56": "0x25E215CcE40bD849B7c286912B85212F984Ff1e0",
          "97": "0x6492dF28A9478230205c940A245Ffb114EaEb9d1",
        },
        "name": "PoolLens",
      },
      {
        "abi": [
          {
            "inputs": [
              {
                "internalType": "address",
                "name": "market",
                "type": "address",
              },
              {
                "internalType": "enum ComptrollerStorage.Action",
                "name": "action",
                "type": "uint8",
              },
            ],
            "name": "ActionPaused",
            "type": "error",
          },
        ],
        "name": "IsolatedPoolComptroller",
      },
      {
        "abi": [
          {
            "inputs": [
              {
                "internalType": "uint256",
                "name": "amount",
                "type": "uint256",
              },
              {
                "internalType": "uint256",
                "name": "amountMax",
                "type": "uint256",
              },
            ],
            "name": "ExcessiveInputAmount",
            "type": "error",
          },
        ],
        "address": {
          "56": {
            "0x94c1495cd4c557f1560cbd68eab0d197e6291571": "0xBBd8E2b5d69fcE9Aaa599c50F0f0960AA58B32aA",
            "0xfd36e2c2a6789db23113685031d7f16329158384": "0x8938E6dA30b59c1E27d5f70a94688A89F7c815a4",
          },
          "97": {
            "0x94d1820b2d1c7c7452a163983dc888cec546b77d": "0x83edf1deE1B730b7e8e13C00ba76027D63a51ac0",
          },
        },
        "name": "SwapRouter",
      },
    ],
    "contractTypesOutputDirectoryPath": "generated/infos/contractTypes",
    "typesOutputDirectoryPath": "generated/infos/types.ts",
  },
]
`;
